chore/ 상수 폴더 경로 지정

--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
           "@router": "./src/router",
           "@components": "./src/components",
           "@containers": "./src/containers",
+          "@constants": "./src/constants",
           "@screens": "./src/screens",
           "@utils": "./src/utils",
           "@": "./src"
