--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-navigation/native-stack": "^6.9.9",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-simple-modal": "^9.0.1",
     "react-native-status-bar-height": "^2.6.0"
   },
   "devDependencies": {
