--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "mobx-react-lite": "^3.4.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-simple-modal": "^9.0.1",
     "react-native-status-bar-height": "^2.6.0"
   },
   "devDependencies": {
