--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-status-bar-height": "^2.6.0"
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-wheely": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
