chore/ @modules alias 생성

--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,7 @@
           "@components": "./src/components",
           "@containers": "./src/containers",
           "@constants": "./src/constants",
+          "@modules": "./src/modules",
           "@store": "./src/store",
           "@screens": "./src/screens",
           "@utils": "./src/utils",
