--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
         "alias": {
           "@assets": "./src/assets",
           "@router": "./src/router",
+          "@classes": "./src/classes",
           "@components": "./src/components",
           "@containers": "./src/containers",
           "@constants": "./src/constants",
